# Farmers-Shop-REST-API

./: .flake8  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
core/: admin.py  models.py  serializers.py
core/migrations/: 0001_initial.py
market/: admin.py  apps.py  serializers.py  signals.py  urls.py
market/management/commands/: seed.py
market/migrations/: 0001_initial.py  0002_alter_product_category_alter_product_status.py  0003_alter_product_options_alter_productcategory_options_and_more.py  0004_review.py  0005_productprovider_product_owner.py
market/models/: __init__.py  product.py  product_category.py  product_status.py  review.py
market/views/: __init__.py  product_category_view.py  product_provider_view.py  product_status_view.py  product_view.py  review_view.py
products/: admin.py  apps.py  serializers.py  signals.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_alter_product_category_alter_product_status.py  0003_alter_product_options_alter_productcategory_options_and_more.py  0004_review.py  0005_productprovider_product_owner.py
products/models/: __init__.py  product.py  product_category.py  product_provider.py  product_status.py  review.py
products/views/: __init__.py  product_category_view.py  product_provider_view.py  product_status_view.py  product_view.py  review_view.py
users/: models.py
