[tool.poetry]
name = "farmers-market-backend"
version = "0.1.0"
description = ""
authors = ["Alexander Lubovsky <alexander.lubovsky@intexsoft.by>"]

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.13.1"
Django = "^4.0.6"
psycopg2-binary = "^2.9.3"
drf-nested-routers = "^0.93.4"
djoser = "^2.1.0"
PyYAML = "^6.0"
uritemplate = "^4.1.1"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.5.0"
isort = "^5.10.1"
black = "^22.6.0"
flake8 = "^4.0.1"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
